--- a/lineplotbbq.ipynb
+++ b/lineplotbbq.ipynb
@@ -116,25 +116,28 @@
     "\n",
     "2020 to 2022 \n",
     "The mean temperature and sun hours, lower warmth or less sunshine in these years could have reduced outdoor activities like barbecuing could have had a direct impact on barbecue sauce sales.Similarly, higher precipitation in 2021 to 2022 could discourage outdoor gatherings, leading to lower consumption.\n",
+    "Additionally, the lingering effects of the COVID-19 pandemic during 2020–2022 including lockdowns, social distancing, and restrictions on gatherings  likely contributed to fewer outdoor events and barbecues, further reducing sales.\n",
     " \n",
     " Possible inference \n",
-    " The declining  in sales could be associated with less favorable weather for outdoor activities \n",
+    " The declining  in sales could be due the impact of COVID-19 restrictions, which limited social gatherings and outdoor events and the less favorable weather for outdoor activities \n",
     "\n",
     " 2023\n",
     " A year with warmer average temperatures, lower rainfall, and more sun hours nationwide would create ideal conditions for outdoor activities and grilling. Increased sunshine and heat correlate with people hosting more barbecues thus driving sauce sales up. Potentually if 2023 saw low precipitation and long summer periods, that would have amplified this surge.\n",
+    " Moreover, 2023 marked a post-pandemic recovery period  as people returned to normal social life, travel, and outdoor gatherings, the surge in social events and reunions could have amplified the already favorable weather effect, boosting sales further.\n",
     "\n",
-    " Possible inference is that the high sales sales in 2023 is likely due to favourable weather patterns experienced in that year. \n",
+    " Possible inference is that the high sales sales in 2023 is likely due to favourable weather patterns experienced in that year and and the post-COVID social recovery, as people resumed outdoor gatherings and celebrations.\n",
     "\n",
     " 2024\n",
     "The Weather  in this year might have remained good but slightly less ideal for instance, a small rise in rainfall or fewer sun hours could explain a modest drop. However, it is  also possible that the market reached near saturation, demand stabilized after 2023 boom.\n",
+    "In addition, even though COVID-19 was largely under control, changes in consumer spending habits formed during the pandemic  such as eating more at home and reduced impulsive outdoor consumption  may have contributed to a slight normalization in sales.\n",
     "\n",
-    "This could be infered to be a stable year, possibly reflecting consistent climate and strong consumer demand, but not execptional condition for 2023.\n",
+    "This could be infered to be a stable year, possibly reflecting consistent climate and strong consumer demand, but not execptional condition for 2023,alongside lingering shifts in consumer habits formed during the COVID-19 period.\n",
     "\n",
     "2025\n",
-    "Could be a result of unfavorable weather acampanied by cooler or wetter conditions and  the increased precipitation and reduced sunshine could discourage outdoor events, lowering sales.\n",
-    "Alternatively, if 2025 experienced more extreme weather such as storms or colder averages, people would grill less frequently.\n",
+    "Could be a result of unfavorable weather accompanied by cooler or wetter conditions and the increased precipitation and reduced sunshine could discourage outdoor events, lowering sales. Alternatively, if 2025 experienced more extreme weather such as storms or colder averages, people would grill less frequently.\n",
+    "At the same time, residual economic impacts from the pandemic such as inflation or changes in lifestyle priorities might have influenced consumer behavior, leading to fewer leisure spending occasions like outdoor barbecues.\n",
     "\n",
-    "Possible inference in 2025,sales declined likely due to weather regression, less sunshine or more rain impacting barbecue related behavior.\n",
+    "Possible inference in 2025,sales declined likely due to weather regression, less sunshine or more rain impacting barbecue related behavior and possible long term economic or lifestyle adjustments following the COVID-19 pandemic.\n",
     "\n",
     "\n",
     "\n",
